--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Kayla</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday to youu!!May today be a beautiful and joy-filled moment for you. Wishing you a fantastic celebration and a wonderful year ahead. Thank you for being an important part of my life, and I hope we can continue to share meaningful moments together. May this year be a great start for new adventures and greater success. Happy birthday once again, may today and every day of your life be filled with happiness!
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
