--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Kayla</span>
+                <span id="name">dwi rindiani</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
