--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Hi
                 <span id="name">Echa Fitri Septiani</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">I really like your name btw!!</p>
         </div>
 
         <div class="three">
