--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 Hi
                 <span id="name">Echa Fitri Septiani</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!!</p>
+            <p class="two" id="greetingText">I really like your name btw!!
+                
+            </p>
         </div>
 
         <div class="three">
@@ -69,7 +71,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May always be with you! ;)</h5>
+                <h5 id="wishText">May always be with you</h5>
             </div>
         </div>
 
